delete woman function compelete ( with delete photo)

--- a/src/pages/Admin Page/AdminPage.css
+++ b/src/pages/Admin Page/AdminPage.css
@@ -22,6 +22,8 @@ display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
 align-content: space-around;
+margin: auto;
+width: 80%;
 }
 
   .btnhover {
