--- a/src/Components.css
+++ b/src/Components.css
@@ -189,7 +189,7 @@ background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(0,212,255,1) 100%
     justify-content: center;
     margin-bottom: 0%;
     width: 100%;
-    background-color: slategray;
+    background-color: #f8f9fa!important;
     
 }
 
