--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -384,8 +384,9 @@ border-color: purple;
 
 .regularLabel{
 
-
-
+font-size: x-large;
+color: purple;
+font-weight:bold;
 
 }
 
@@ -398,6 +399,8 @@ align-self: center;
 #howWas{
 
     text-align: center;
+    font-size: x-large;
+    font-weight:bold;
 
 }
 
