--- a/src/Components.css
+++ b/src/Components.css
@@ -182,8 +182,8 @@ background: rgb(191, 224, 232);
 
 #bottom {
     position: relative;
-    display: flex;
-    justify-content: center;
+    display: table;
+    text-align: center;
     margin-bottom: 0%;
     width: 100%;
     background-color: #f8f9fa!important;
@@ -215,4 +215,9 @@ background: rgb(191, 224, 232);
     width: 100%;
     height: 50%;
 
+}
+
+#builders{
+display: table-cell;
+vertical-align: middle;
 }
