--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -189,7 +189,7 @@ padding-bottom: 3%;
     border-radius: 6px;
     padding: 8px 0;
     position: absolute;
-    z-index: 1;
+    z-index: -1;
     bottom: 125%;
     left: 0%;
     margin-left: -80px;
@@ -410,4 +410,12 @@ width: 8%;
 align-self: center;
 /* justify-self: center; */
 /* place-self: center; */
+}
+
+.requiredFooter{
+
+    text-align: right;
+    font-size: normal;
+    font-weight:bold;
+
 }
