--- a/src/pages/Admin Page/AdminPage.css
+++ b/src/pages/Admin Page/AdminPage.css
@@ -29,7 +29,6 @@ width: 80%;
   .btnhover {
     display: block;
     cursor: pointer;
-    outline: none;
     border: none;
     background-color: purple;
     width: 350px;
@@ -41,9 +40,11 @@ width: 80%;
     background-size: 100% 100%;
     box-shadow: 0 0 0 7px var(--dark) inset;
     margin: 10px;
+    outline: none;
   }
   
   .btnhover:hover {
+    outline: none;
     background-image: linear-gradient(
       169.268deg,
       transparent 10%,
@@ -58,6 +59,9 @@ width: 80%;
       var(--dark) 90% 100%
     );
     animation: background 2s linear infinite;
+  }
+  button:focus {
+    outline: none;
   }
   
   @keyframes background {
