--- a/src/pages/category/Category.css
+++ b/src/pages/category/Category.css
@@ -12,6 +12,8 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      width: 80%;
+      margin: auto;
       /* align-content: center; */
       
   }
