addad unchecked feilds to the admin page

--- a/src/pages/category/Category.css
+++ b/src/pages/category/Category.css
@@ -1,39 +1,50 @@
-.container 
+/* .container 
 {
     position: relative;
     width: 100%;
     max-width: 400px;
     display: inline-block;
     
-  }
+  } */
 
   #category-container
   {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      /* flex-wrap: wrap; */
+      /* justify-content: center; */
       width: 80%;
       margin: auto;
       /* align-content: center; */
       
   }
+  .catagoryImgContainer{
   
-  .container img 
+
+  }
+  .catagoryImg
   {
+    
     width: 250px;
     height: 250px;
     object-fit: cover;
+    border-radius: 5%;
   }
-  
-  .container .btn 
+  .catagoryText{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    z-index: 5;
+    background: rgba(0, 0, 0, 0.411);
+    transform: translate(-50%, -50%);
+  }
+  .catagoryBtn
   {
     position: absolute;
-    top: 13%;
-    left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     background-color:transparent;
-    color: white;
+    color: black;
     font-size: 16px;
     padding: 12px 24px;
     border: none;
@@ -42,7 +53,7 @@
     text-align: center;
   }
   
-  .container .btn:hover 
+  .catagoryBtn:hover 
   {
     background-color:transparent;
   }
