--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -40,7 +40,7 @@ h1{
     text-align: center;
 }
 
-#womanCardsContainer{
+.womanCardsContainer{
 height: 300px;
 width: 250px;
 border: 3px groove orange ;
