--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -42,7 +42,10 @@ h1{
 
     height: 120px;
     width: 69%;
+    margin-right: 0.5%;
     border: 3.5px groove purple ;
+    border-radius: 3%;
+    margin-bottom: 0.09%;
     text-align: center;
     text-justify: inter-word;
     flex-wrap: wrap;
@@ -77,16 +80,3 @@ h1{
 
     font-weight: bolder;
 }
-
-/* .searchTxtContainer{
-
-    margin-top: 10%;
-    margin-right: 17%;
-    width: 39%;
-    border: 3.5px groove purple ;
-    /* text-align: center; */
-    /* text-justify: inter-word; */
-    /* display: flex; 
-    flex-wrap:  wrap;
-
-} */
