--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,6 +1,5 @@
 .dropdown {
     cursor: pointer;
-   
 }
 
 .dropdown__content {
@@ -8,7 +7,7 @@
     cursor: pointer;
 }
 
-.dropdown--active  .dropdown__content {
+.dropdown--active .dropdown__content {
     direction: rtl;
     display: block;
     float: left;
@@ -16,34 +15,44 @@
     cursor: pointer;
     padding: 1vh;
     /* width: 100%; */
-    
 }
-#globus{  
+
+#globus {
     float: right;
-    height:40px;
+    height: 40px;
     width: 40px;
 }
+
 /* #langlist{
     width: 50vh;
 } */
-#languages
-{
 
+#languages {
     cursor: pointer;
     margin-top: 0%;
 }
 
-ul
-{
-    margin-top:0px ;
+#choosen {
+    border-color: royalblue;
+    border-style: solid;
+    border-width: 2px;
+    box-shadow: 0 0 10px royalblue;
+    color: white;
+}
+
+ul {
+    margin-top: 0px;
     padding: 0px;
     list-style-type: none;
 }
-.langButtons{
+
+.langButtons {
     cursor: pointer;
     width: 100px;
     padding: 5px;
     background-color: rgb(165, 4, 165);
-    color: white;
+    color: #adb5bd;
     font-weight: bold;
+    border-radius: 13%;
+    margin-bottom: 2%;
 }
