--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -19,6 +19,7 @@ padding-bottom: 3%;
     max-height: fit-content;
     height: auto;
     background-color: rgb(216,191,216);
+    text-align: center;
     /* height: 100%; */
 }
 
