--- a/src/pages/Admin Page/AdminPage.css
+++ b/src/pages/Admin Page/AdminPage.css
@@ -120,3 +120,13 @@ width: 80%;
 .index{
   display: contents;
 }
+
+ /* table {
+
+   height: 100px;
+   display: block;
+   overflow-y:scroll;
+
+} 
+
+ */
