--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -105,14 +105,18 @@ color: black;
 .catImage{
 
     border-radius: 30%;
-    /* height: 20vh; */
-   max-height:100% ;
+    height: 30vh;
+   /* max-height:100% ; */
    /* width: auto; */
    object-fit: cover;
-   width: 25%;
+   width: 30vh;
 }
 .catSummery{
-    max-width: 80%;
+
+    
+    /* max-width: 80%; */
+    /* display: flex; */
+    /* background-color: gray; */
     
 }
 
