table titles update

--- a/src/pages/Admin Page/AdminPage.css
+++ b/src/pages/Admin Page/AdminPage.css
@@ -6,7 +6,7 @@
   --dark: rgb(186, 85, 211);
   }
 
-#adminTitle {
+.titles {
     justify-self: center;
     text-align: center;
     color: purple;
