--- a/src/pages/category/Category.css
+++ b/src/pages/category/Category.css
@@ -65,3 +65,16 @@
   {
     background-color:transparent;
   }
+
+  #shoWoman2{
+
+    margin-right: 5%;
+    flex-direction: row;
+    width: 65%;
+    font-size: larger;
+    /* margin: auto; */
+    text-align: justify;
+    text-justify: inter-word;
+
+
+  }
