Bug fix - wrrong index in admin users table

--- a/src/pages/Admin Page/AdminPage.css
+++ b/src/pages/Admin Page/AdminPage.css
@@ -91,15 +91,15 @@ width: 80%;
   /* margin-right: 90%; */
 }
 
-#backBtn {
+/* #backBtn {
   margin: 5px;
   margin-bottom: 8px;
-}
+} */
 
-#addUserBtn {
+/* #addUserBtn {
   margin: 5px;
   margin-bottom: 8px;
-  }
+  } */
 
 .deleteBtn {
   height: 60px;
