--- a/src/Components.css
+++ b/src/Components.css
@@ -105,29 +105,38 @@ background: rgb(191, 224, 232);
 
 .details {
     height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-top: 1%;
 }
 
 .roundedImg {
-    /* display: inline; */
-    /* display: none; */
     object-fit: cover;
-    margin-top: 4%;
-    margin-left: 12%;
+    margin: auto;
+    display: flex;
     border-radius: 50%;
     border-style: solid;
     border-color: rgb(206, 206, 206);
     border-width: 3px;
     box-shadow: 0 0 10px rgb(206, 206, 206);
+    /* display: inline; */
+    /* display: none; */
+    /* margin-top: 4%; */
+    /* margin-left: 12%; */
 }
 
 .displayName {
-    position: absolute;
-    margin-top: 3%;
-    margin-right: 6%;
-    color: rgb(206, 206, 206);
-    -webkit-text-stroke: rgb(190, 74, 248);
-    -webkit-text-stroke-width: 0.5px;
-    text-shadow: 0 0 10px rgb(190, 74, 248);
+    margin: auto;
+    color: rgb(199, 7, 224);
+    width: 30%;
+    /* position: absolute; */
+    /* margin-top: 3%; */
+    /* margin-right: 6%; */
+    /* -webkit-text-stroke: rgb(190, 74, 248); */
+    /* -webkit-text-stroke-width: 0.5px; */
+    /* text-shadow: 0 0 20px rgb(193, 166, 206); */
 }
 
 .highlights {
