--- a/src/Components.css
+++ b/src/Components.css
@@ -141,7 +141,7 @@ background: rgb(191, 224, 232);
 
 .highlights {
     position: absolute;
-    margin-top: 9%;
+    margin-top: 4%;
     margin-left: 15%;
     margin-right: 15%;
     color: rgb(49, 49, 49);
@@ -243,7 +243,8 @@ background: rgb(191, 224, 232);
 
 #builder{
 display: table-cell;
-vertical-align: middle;
+/* vertical-align: middle; */
+text-align: center;
 }
 
 #managerBtn{
