--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -18,18 +18,18 @@
 }
 
 #globus {
-    float: right;
     height: 40px;
     width: 40px;
+    margin: auto;
+
 }
 
-/* #langlist{
-    width: 50vh;
-} */
+
 
 #languages {
     cursor: pointer;
     margin-top: 0%;
+    
 }
 
 #choosen {
@@ -55,4 +55,15 @@ ul {
     font-weight: bold;
     border-radius: 13%;
     margin-bottom: 2%;
+}
+#currentLangDisplay{
+    font-size:20px;
+    font-weight:bold ;
+    margin: auto;
+    
+}
+#displayAndGlobe{
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
 }
