--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -174,9 +174,7 @@ padding-bottom: 3%;
     align-self: center;
     
 }
-.ReactCrop__image{
-    max-width: 100%;
-}
+
 img {
     max-width: 100%;
   }
@@ -355,4 +353,15 @@ align-self: center;
     margin: auto;
     margin-top: 3%;
     margin-bottom: 3%;
+}
+#imgUp{
+    max-height: 250vh;
+}
+.sticky{
+    position: sticky;
+
+    /* position: fixed; */
+    top: 0;
+    /* width: 100%; */
+  
 }
