--- a/src/forms/Forms.css
+++ b/src/forms/Forms.css
@@ -1,10 +1,12 @@
 label {
     vertical-align: top;
 }
+
 #modal-header
 {
 background-color: purple;            
 }
+
 .modal-dialog{
 margin: auto;
 padding-bottom: 3%;
@@ -68,13 +70,12 @@ padding-bottom: 3%;
 }
 
 
-
 .langTabs{
  padding: 16px; 
 }
 
   
-/* stars */
+/*----- stars ------ */
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 .starrating > input {display: none;}  /*Remove radio buttons*/
 
@@ -87,8 +88,6 @@ padding-bottom: 3%;
   cursor: pointer;
   
 }
-
-
 
 .starrating > label
 {
@@ -103,6 +102,7 @@ padding-bottom: 3%;
 .starrating{
     max-width: 100%;
 }
+/*----- stars ------ */
 
 .input-group
 {
@@ -250,7 +250,6 @@ img {
     margin-top: 8%;
     margin-left: 12%;
     border-color: purple;
-
 }
 
 
@@ -283,34 +282,26 @@ display: none;
 padding-left: 0%;
 margin-left: 29%;
 border-color: purple;
-
 }
 
 .descAndLink{
-
- 
  width: 110%;
  padding-left: 40%;
  margin-left: 10%;
- border-color: purple;
-
+  border-color: purple;
 }
 
 
 
 
 .regularLabel{
-
 font-size: x-large;
 color: purple;
 font-weight:bold;
-
 }
 
 #submit1{
-
 align-self: center;
-
 }
 
 #howWas{
@@ -341,7 +332,6 @@ align-self: center;
     margin:inherit;
 }
 #addFactBtn{ /*design for submit button in did you know form*/
-    
     width: auto;
 }
 
@@ -359,9 +349,5 @@ align-self: center;
 }
 .sticky{
     position: sticky;
-
-    /* position: fixed; */
     top: 0;
-    /* width: 100%; */
-  
 }
