--- a/src/Components.css
+++ b/src/Components.css
@@ -4,20 +4,15 @@
 
 .navbar-nav {
     width: 100%;
-    /* align-content: space-around; */
+
+  
 }
 
 #example-search-input4 {
     margin: 0;
     width: 100%;
-    /* border-radius: 20px; */
 }
 
-#search-bar-outline {
-    border: 2vh;
-    border: black;
-    border-left: none;
-}
 
 #search-bar-outline {
     display: flex;
@@ -25,15 +20,25 @@
 }
 
 #stretcher {
-    width: 70%;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    
 }
-
+#navbarToggler{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
 #logo {
     height: 70px;
 }
-
+#langItam{
+    width: 10%;
+    /* border: 1px solid black; */
+}
 #search-form {
-    max-width: 70%;
+    width: 60%;
 }
 
 #search-btn {
@@ -45,12 +50,6 @@
     border: none;
 }
 
-#clear-btn {
-    background-color: rgba(255, 255, 255, 0);
-    border: none;
-    margin: auto;
-    margin-right: -8%;
-}
 
 .nav-item {
     /* justify-content:space-evenly ; */
