--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -44,8 +44,9 @@ h1 {
 
 .womanCardsContainer {
     height: 125px;
-    width: 69%;
-    margin-right: 0.5%;
+    width: 97%;
+    margin: auto;
+   
     border: 3.5px groove purple;
     margin-bottom: 0.09%;
     text-align: center;
@@ -53,6 +54,14 @@ h1 {
     flex-wrap: wrap;
     flex-direction: row;
     overflow: hidden;
+}
+#deckContainer{
+    width: 100%;
+    /* background: white; */
+}
+#womenHolder{
+    width: 100%;
+
 }
 
 .roundImage {
@@ -123,14 +132,15 @@ h1 {
     overflow-x:auto;
     height: 43vh;
     overflow-y: hidden;
-     border: 4px solid black;
+     /* border: 4px solid black; */
 }
 
 
 #lightBox
 {
-    display: inline-flex;
+    display: flex;
     align-items: stretch;
+    justify-content: center;
     height:100%;
 }
 
