--- a/src/pages/login page/LoginPage.css
+++ b/src/pages/login page/LoginPage.css
@@ -13,7 +13,8 @@ input {
     /* padding: 12px 20px; */
     border: 1px solid #ccc;
     margin: auto;
-    width: 40vh;
+    width: 100%;
+    height: 40px;
     padding-top: 1%;
     padding-bottom: 1%;
     border-radius: 20px 20px;
@@ -28,14 +29,15 @@ input {
     padding: 12px 20px;
     border: 1px solid #ccc;
     margin: auto;
-    width: 40vh;
+    width: 75%;
     border-radius: 20px 20px;
     margin-top: 3%;
     outline: none;
 }
 
 #login_form {
-
+    width:20vw;
+    margin:auto;    
     margin-top: 1%;
     justify-content: space-around;
 }
@@ -43,8 +45,8 @@ input {
 #bigLogo {
     display: block;
     margin: auto;
-    width: 55vh;
-    height: 30vh;
+    width: 30vw;
+    height: 15vw;
     padding-top: 6%;
 }
 
