--- a/src/forms/ImageUpload.css
+++ b/src/forms/ImageUpload.css
@@ -1,12 +1,15 @@
 .photoPrev{
     height: 100%;
-    max-width: 30%;
+    max-width: 100%;
+    float: right;
 }
 .photoPrevContainer{
     height: 20vh;
     width: 100%;
     display: inline-flex;
     position: relative;
+    margin-top: 10px;
+    /* justify-content: space-evenly; */
 }
 .presentImages{
     display: inline-flex;
@@ -17,11 +20,70 @@
     width: 50%;
     display: inline-flex;
 }
-.deleteImage{
-    float: right;
+.descriptionContainer{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+   
+}
+/* .photoPrevDesc{
+    margin: auto;
+} */
+.photoWithClose{
     position: relative;
-    left: 0px;
+    height: 100%;
+    max-width: 50%;
+    margin:auto;
+}
+.deleteImage{
+    /* float: right; */
+    position: absolute;
+    right:  0px;
     top: 0px;
     height: 30px;
-border-radius: 50%;
+    border-radius: 50%;
+    background: blueviolet;
+}
+#uploadBtn{
+    height: 35px;
+}
+#multiUploadBtn{
+    height: 35px;
+}
+
+input[type="file"] {
+    display: none;
+}
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
+.ReactCrop__image { 
+    max-height: 60vh;
+}
+.ReactCrop__crop-selection { 
+    max-height: 60vh;
+}
+#croppedUrl{
+    margin: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    height: 30vh;
+    width: 30vh;
+}
+.ReactCrop {
+    width: fit-content;
+    margin: auto;
+}
+#imgUp{
+    max-height: 250vh;
+    max-width: 100%;
+}
+.uploadButtons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
