--- a/src/pages/main user page/MainUserPage.css
+++ b/src/pages/main user page/MainUserPage.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    /* align-content: space-evenly; */
     justify-content: space-around;
     width:80%;
 }
@@ -13,14 +12,17 @@
 .checkbox_conatainer{
     display: flex;
     text-align: center;
+    justify-content: space-around;
     margin: 2%;
-    align-items: baseline;
+    align-items: center;
     
 }
 
 .checkbox
 {
     width:15px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 .lableCheckBox
@@ -55,6 +57,7 @@
     text-justify: inter-word;
     text-align: center;
     width:80%;
+    z-index: 6;
     align-content: center;
     overflow: hidden;
 }
@@ -67,15 +70,13 @@
     text-decoration: none;
 }
 .leftEnd {
-    position: absolute;
     bottom: 30px;
     width: 94%;
+    z-index: 5;
     text-decoration: underline;
     font-size: 30px;
     text-align: end;
-    align-items: center;
-    
-  
+    align-items: center;  
 }
 
 .slideDesc {
