--- a/src/pages/woman page/WomanPage.css
+++ b/src/pages/woman page/WomanPage.css
@@ -122,17 +122,15 @@ h1 {
     color: black;
 }
 #suggest{
-    width: 65%;
-    float: right;
-    margin-right: 3%;
-    border-radius: 3%;
-    margin-top:1%;
+    width: 97.5%;
+    padding: 3%;
+    border-radius: 1%;
+  
 }
 #photoContainer{
     overflow-x:auto;
     height: 43vh;
     overflow-y: hidden;
-     /* border: 4px solid black; */
 }
 
 
@@ -140,8 +138,10 @@ h1 {
 {
     display: flex;
     align-items: stretch;
-    justify-content: center;
     height:100%;
+    width: fit-content;
+    max-width: 100%;
+    margin: auto;
 }
 
 .lightBoxImage
@@ -153,4 +153,9 @@ h1 {
 {
     height:100% ;
     width:fit-content;
+}
+
+#womanDeleteBtn{
+    margin-right: 4px;
+    margin-left: 4px;
 }
